--- a/index.html
+++ b/index.html
@@ -5,5 +5,6 @@
   </head>
   <body>
     <a href="generaattori.html">Generaattori<br>
+    <a href="toinensivu.html">Ei generaattori<br>
   </body>
 </html>
